[gd_scene load_steps=7 format=3 uid="uid://dfvgjkr5rc346"]

[ext_resource type="Script" uid="uid://bdg4g08qn60o" path="res://Scripts/main_gravestone.gd" id="1_qxdgm"]
[ext_resource type="Texture2D" uid="uid://ibluwfummsyw" path="res://Textures/gravestones_large_.png" id="1_wq7p7"]
[ext_resource type="Texture2D" uid="uid://iqhpq847qaah" path="res://Textures/gravestones_large_1.png" id="2_pgt7t"]
[ext_resource type="Texture2D" uid="uid://b42liqtvnau2l" path="res://Textures/gravestones_large_2.png" id="3_qxdgm"]
[ext_resource type="Texture2D" uid="uid://dn26mkac71xrt" path="res://Textures/gravestones_large_3.png" id="4_gdb7n"]
[ext_resource type="Texture2D" uid="uid://b85q4plf0rfgs" path="res://Textures/gravestones_large_4.png" id="5_0afrp"]

[node name="main_gravestone" type="Node3D"]
script = ExtResource("1_qxdgm")

[node name="empty_grave_slots" type="Sprite3D" parent="."]
transform = Transform3D(0.05, 0, 0, 0, 0.045, 0, 0, 0, 0.05, 0.252, 0, 0.013257)
sorting_use_aabb_center = false
offset = Vector2(0, 918)
billboard = 2
texture = ExtResource("1_wq7p7")

[node name="grave_slot_1" type="Sprite3D" parent="."]
transform = Transform3D(0.05, 0, 0, 0, 0.045, 0, 0, 0, 0.05, 0.252, 0, 0.013257)
visible = false
sorting_use_aabb_center = false
offset = Vector2(0, 918)
billboard = 2
texture = ExtResource("2_pgt7t")

[node name="grave_slot_2" type="Sprite3D" parent="."]
transform = Transform3D(0.05, 0, 0, 0, 0.045, 0, 0, 0, 0.05, 0.252, 0, 0.013257)
visible = false
sorting_use_aabb_center = false
offset = Vector2(0, 918)
billboard = 2
texture = ExtResource("3_qxdgm")

[node name="grave_slot_3" type="Sprite3D" parent="."]
transform = Transform3D(0.05, 0, 0, 0, 0.045, 0, 0, 0, 0.05, 0.252, 0, 0.013257)
visible = false
sorting_use_aabb_center = false
offset = Vector2(0, 918)
billboard = 2
texture = ExtResource("4_gdb7n")

[node name="grave_slot_4" type="Sprite3D" parent="."]
transform = Transform3D(0.05, 0, 0, 0, 0.045, 0, 0, 0, 0.05, 0.252, 0, 0.013257)
visible = false
sorting_use_aabb_center = false
offset = Vector2(0, 918)
billboard = 2
texture = ExtResource("5_0afrp")
